[package]
name = "ak_os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "bootloader",
    "bootloader/uefi",
    "kernel"
]

[build-dependencies]
ak_os-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
ak_os-bootloader = { path = "bootloader" }

[dependencies]
build-time = "0.1"
