[package]
name = "ak_os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kernel"
]

[build-dependencies]
ak_os-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = { git = "https://github.com/rust-osdev/bootloader", branch = "next" }

[dependencies]
build-time = "0.1"
