[package]
name = "ak_os"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "kernel",
    "tests/runner",
]

[build-dependencies]
ak_os-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11"

[dependencies]
build-time = "0.1"
command-macros = { version = "0.2", features = ["nightly"] }

[dev-dependencies]
ak_os-tests-runner = { path = "tests/runner" }
ak_os-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none", features = ["test"], default-features = false }
