[package]
name = "ak_os-kernel"
version = "0.1.0"
edition = "2021"

[features]
default = []

dbg = ["dbg-mem", "dbg-acpi", "dbg-interrupts", "dbg-executor"]
dbg-mem = []
dbg-acpi = []
dbg-interrupts = []
dbg-executor = []

test = []

[dependencies]
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
x86_64 = "0.14"
bootloader_api = "0.11"
linked_list_allocator = "0.10"
noto-sans-mono-bitmap = "0.2"
spinning_top = "0.2"
conquer-once = { version = "0.3", default-features = false }
crossbeam-queue = { version = "0.3", default-features = false, features = ["alloc"] }
crossbeam-utils = { version = "0.8", default-features = false }
lazy_static = { version = "1.4", features = ["spin_no_std"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
pic8259 = "0.10"
x2apic = "0.4"
x86 = "0.52"
spin = "0.9"
acpi = "4.1"
uart_16550 = "0.2"
pc-keyboard = "0.6"
thiserror-no-std = "2.0"
heapless = { version = "0.7", features = ["x86-sync-pool"] }

[build-dependencies]
chrono = "0.4"
