[package]
name = "ak_os-bootloader-uefi"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.16", default-features = false, features = ["alloc", "logger"] }
ak_os-bootloader-common = { path = "../common" }
log = {version = "0.4", default-features = false }
backtracer_core = "0.0"
aligned = "0.4"
